<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context="com.example.android.assignment03_guilbaud.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullName"
        android:textColor="@color/uvaOrange"
        android:textSize="@dimen/title_size"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interestingFactsHeader"
        android:textColor="@color/uvaBlue"
        android:textSize="@dimen/title_size"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstInterestingFact"
        android:textColor="@color/uvaOrange"
        android:textSize="@dimen/regular_text_size"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondInterestingFact"
        android:textColor="@color/uvaBlue"
        android:textSize="@dimen/regular_text_size"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdInterestingFact"
        android:textColor="@color/uvaOrange"
        android:textSize="@dimen/regular_text_size"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imageCaption"
        android:textColor="@color/uvaBlue"
        android:textSize="@dimen/image_caption_size"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/my_cousin_and_i" />
    />
</LinearLayout>